# ccwc

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
ccwc/: __init__.py  __main__.py  cli.py  counters.py
tests/: test_file_counters.py  test_stdin_counters.py  test_version.py
